[gd_scene load_steps=10 format=3 uid="uid://cvjosseissdml"]

[ext_resource type="PackedScene" uid="uid://bj233wg0k5djo" path="res://addons/k-vehicle/scene/instantiable/kwheel.tscn" id="1_l4ani"]
[ext_resource type="Script" path="res://addons/k-vehicle/scene/instantiable/kwheel.gd" id="2_lq7pn"]
[ext_resource type="Script" path="res://addons/k-vehicle/scene/instantiable/wheelSteerPivot.gd" id="3_r2iqx"]
[ext_resource type="ArrayMesh" uid="uid://m0m1mu6tggmc" path="res://mesh/hatchback-wheel.obj" id="4_lgjs2"]
[ext_resource type="Script" path="res://addons/k-vehicle/scene/instantiable/debugVectors.gd" id="5_mv7yg"]
[ext_resource type="Script" path="res://addons/k-vehicle/scene/instantiable/Label3DRPS.gd" id="6_mx04q"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5vg7i"]
height = 0.1
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_327r1"]
no_depth_test = true
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="ImmediateMesh" id="ImmediateMesh_x7ti5"]
resource_local_to_scene = true

[node name="Node3D" type="Node3D"]

[node name="kwheel" parent="." instance=ExtResource("1_l4ani")]
script = ExtResource("2_lq7pn")

[node name="RayCast3D" parent="kwheel" index="0"]
enabled = false

[node name="shapecastPivot" parent="kwheel" index="1"]
transform = Transform3D(0.933013, -0.25, 0.258819, 0.258819, 0.965926, 0, -0.25, 0.0669873, 0.965926, 0, 0, 0)

[node name="ShapeCast3D" parent="kwheel/shapecastPivot" index="0"]
transform = Transform3D(-2.79397e-08, -1, -1.49012e-08, 1, -2.04891e-08, 0, 7.45058e-09, 0, 1, 0, 0, 0)
enabled = false
shape = SubResource("CylinderShape3D_5vg7i")
target_position = Vector3(-1, 0, 0)

[node name="wheelSteerPivot" parent="kwheel" index="2"]
transform = Transform3D(0.933013, -0.25, 0.258819, 0.258819, 0.965926, 0, -0.25, 0.0669873, 0.965926, 0, 0, 0)
script = ExtResource("3_r2iqx")

[node name="wheelMesh" parent="kwheel/wheelSteerPivot/wheelRollPivot" index="0"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
mesh = ExtResource("4_lgjs2")

[node name="contactTransform" parent="kwheel" index="3"]
material_override = SubResource("StandardMaterial3D_327r1")
cast_shadow = 0
mesh = SubResource("ImmediateMesh_x7ti5")
script = ExtResource("5_mv7yg")

[node name="Label3DDebug" parent="kwheel" index="4"]
sorting_offset = 1.0
pixel_size = 0.002
billboard = 1
double_sided = false
no_depth_test = true
fixed_size = true
script = ExtResource("6_mx04q")

[node name="RollingAudioStreamPlayer3D" parent="kwheel" index="5"]
volume_db = -80.0

[node name="SlippingAudioStreamPlayer3D" parent="kwheel" index="6"]
volume_db = -80.0

[editable path="kwheel"]
